# mittaridatapumppu

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  azure-build-main.yml  azure-build-release.yml  azure-pipelines-build-api.yml  azure-pipelines-build-ui.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  skaffold.yaml
.github/workflows/: build-deviceregistry.yml  build-endpoint.yml  build-parser.yml  build-persister.yml  test-deviceregistry.yml  test-endpoint.yml  test-parser.yml
deploy/: Chart.yaml  values.yaml
deploy/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deviceregistry-deployment.yaml  deviceregistry-service.yaml  endpoint-deployment.yaml  endpoint-service.yaml  hpa.yaml  ingress.yaml  parser-deployment.yaml  parser-service.yaml  persister-deployment.yaml  persister-service.yaml  serviceaccount.yaml
deviceregistry/: settings.py  urls.py
deviceregistry/utils/: views.py
devices/: admin.py  serializers.py  views.py
devices/fixtures/: auth.json  authtoken.json  endpoints.json  initialdata.json
devices/migrations/: 0001_initial.py
devices/scripts/: populate_db_via_api.py
devices/tests/: test_api_device.py  test_api_devicetype.py  test_model.py  test_modeladmin.py
docs/: README.md  deviceregistry.md
endpoints/: models.py  serializers.py  views.py
endpoints/migrations/: 0001_initial.py
mittaridatapumppu-deviceregistry/deviceregistry/: settings.py  urls.py
mittaridatapumppu-deviceregistry/devices/: models.py  serializers.py  views.py
service-deviceregistry/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
service-endpoint/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
service-endpoint/endpoints/: __init__.py
service-endpoint/endpoints/default/: tokenauth.py
service-endpoint/endpoints/digita/: aiothingpark.py
service-endpoint/tests/: test_api.py
service-parser/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
service-parser/tests/: 70B3D50123456789.sh  test_digita_sensornode.py
service-persister/: Dockerfile
tests/: 70B3D50123456789.sh  README.md  docker-compose.yml  requirements.txt
(+29 files in other folders)
