[tool.setuptools]
py-modules = []

[project]
name = "mittaridataputki-endpoint"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

dependencies = [
  # "aiohttp",
  "aiokafka",
  # "aioredis",
  "fastapi",
  "fvhiot@https://github.com/ForumViriumHelsinki/FVHIoT-python/archive/refs/heads/master.zip",
  "kafka-python",
  # "msgpack",
  "python-multipart",
  "sentry-asgi",
  "uvicorn",
  # "xmltodict",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "autopep8",
  "black",
  "flake8",
  "gunicorn",
  "httpx",
  "isort",
  "pep8-naming",
  "pre-commit",
  "pydantic",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
