[tool.setuptools]
py-modules = []

[project]
name = "mittaridataputki-endpoint"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

dependencies = [
  "aiokafka",
  "fastapi",
  "fvhiot@https://github.com/ForumViriumHelsinki/FVHIoT-python/archive/refs/tags/v0.3.1.zip",
  "kafka-python",
  "python-multipart",
  "sentry-asgi",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "autopep8",
  "black",
  "flake8",
  "gunicorn",
  "httpx",
  "isort",
  "pep8-naming",
  "pre-commit",
  "pydantic",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
test = [
    "pytest",
    "requests"
] #pip-compile --resolver=backtracking --extra test pyproject.toml
