[tool.setuptools]
py-modules = []

[project]
name = "mittaridataputki-parser"
description = ""
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

dependencies = [
  "httpx",
  "aiokafka",
  "isodate",
  "fvhiot@https://github.com/ForumViriumHelsinki/FVHIoT-python/archive/refs/tags/v0.3.1.zip",
  "kafka-python",
  "msgpack",
  "pydantic",
  "sentry_sdk"
]

[project.optional-dependencies]
dev = [
  "autoflake",
  "autopep8",
  "black",
  "flake8",
  "gunicorn",
  "httpx",
  "isort",
  "pep8-naming",
  "pre-commit",
  "pydantic",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
test = [
    "pytest",
    "requests"
] #pip-compile --resolver=backtracking --extra test pyproject.toml
